# poetry_test

./: pyproject.toml
tests/: test_mycalc.py
